--- a/MiniProject_FoodDelivery_Final.ipynb
+++ b/MiniProject_FoodDelivery_Final.ipynb
@@ -1690,7 +1690,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# PDSL\n",
+        "# Model Training and Prediction\n",
         "---"
       ],
       "metadata": {
